# emerald-lang

./: Cargo.toml
src/: lib.rs  main.rs
src/compiler/: codegen.rs  error.rs  mod.rs
src/driver/: mod.rs
src/parser/: ast.rs  config.rs  error.rs  lexer.rs  mod.rs
