[package]
name = "emerald-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
regex-macro = "*"
custom_error = "*"
llvm-sys = "150"
docopt = "1.1.1"
inkwell = { version = "0.1.1", features = ["llvm14-0"] }
